--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <textarea id="source">
       class: center, middle
 
-      # Study groups are awesome!
+      # Join a study group
+      # and build cool stuff!
 
       [lislis](https://github.com/lislis) - July 2018
 
